// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initial render with <div>John</div> 1`] = `
<div>
  John
</div>
`;

exports[`render with <div>Barry</div> 1`] = `
<div>
  Barry
</div>
`;

exports[`render with <div>Barry</div> 2`] = `
<div>
  Barry
</div>
`;
